<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_exit_midlet"
        android:title="@string/exit" />
    <item
        android:id="@+id/action_save_log"
        android:title="@string/save_log" />
    <group android:id="@+id/action_group_canvas">
        <item
            android:icon="@drawable/ic_action_keyboard"
            android:id="@+id/action_ime_keyboard"
            android:title="@string/action_keyboard_ime" />
        <item
            android:icon="@drawable/ic_action_screenshot"
            android:id="@+id/action_take_screenshot"
            android:title="@string/take_screenshot" />

        <item
            android:id="@+id/action_limit_fps"
            android:title="@string/PREF_LIMIT_FPS" />

        <item
            android:id="@+id/action_submenu_vk"
            android:title="@string/PREF_VIRTUAL_KEYBOARD_OPTIONS">
            <menu>
                <item
                    android:id="@+id/action_layout_edit_mode"
                    android:title="@string/layout_edit_mode" />
                <item
                    android:id="@+id/action_layout_scale_mode"
                    android:title="@string/layout_scale_mode" />
                <item
                    android:id="@+id/action_layout_edit_finish"
                    android:title="@string/layout_edit_finish" />
                <item
                    android:id="@+id/action_layout_switch"
                    android:title="@string/layout_switch" />
                <item
                    android:id="@+id/action_hide_buttons"
                    android:title="@string/hide_buttons" />
            </menu>
        </item>
    </group>
</menu>
