<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/PREF_VIRTUAL_KEYBOARD_OPTIONS">
        <menu>
            <group android:id="@+id/action_group_common_settings">
                <item
                    android:id="@+id/action_layout_edit_mode"
                    android:title="@string/layout_edit_mode" />
                <item
                    android:id="@+id/action_layout_scale_mode"
                    android:title="@string/layout_scale_mode" />
                <item
                    android:id="@+id/action_layout_edit_finish"
                    android:title="@string/layout_edit_finish" />
                <item
                    android:id="@+id/action_layout_switch"
                    android:title="@string/layout_switch" />
                <item
                    android:id="@+id/action_hide_buttons"
                    android:title="@string/hide_buttons" />
            </group>
        </menu>
    </item>
</menu>
