<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/action_group_common_settings">
        <item
            android:icon="@drawable/ic_action_keyboard"
            android:id="@+id/action_ime_keyboard"
            android:title="@string/action_keyboard_ime"
            android:orderInCategory="1"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
        <item
            android:icon="@drawable/ic_action_screenshot"
            android:id="@+id/action_take_screenshot"
            android:title="@string/take_screenshot"
            android:orderInCategory="2"
            app:showAsAction="always"/>

        <item
            android:id="@+id/action_limit_fps"
            android:title="@string/PREF_LIMIT_FPS"
            />
    </group>
</menu>
