<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/action_settings" />

    <CheckBox
        android:id="@+id/cbKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/PREF_VIRTUAL_KEYBOARD_OPTIONS" />

    <CheckBox
        android:id="@+id/cbDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_as_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/buttonBarStyle">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarNegativeButtonStyle"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarPositiveButtonStyle"
            android:text="@android:string/ok" />
    </LinearLayout>
</LinearLayout>